--- a/src/app/client/client-list/client-list.component.html
+++ b/src/app/client/client-list/client-list.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <h1>Listado de Categorías</h1>
+    <h1>Listado de Clientes</h1>
   
     <mat-table [dataSource]="dataSource">
       <ng-container matColumnDef="id">
@@ -32,7 +32,7 @@
   
     <div class="buttons">
       <button mat-flat-button color="primary" (click)="createClient()">
-        Nueva categoría
+        Nuevo Cliente
       </button>
     </div>
   </div>
