--- a/src/app/game/game-list/game-item/game-item.component.scss
+++ b/src/app/game/game-list/game-item/game-item.component.scss
@@ -6,7 +6,7 @@
         width: 100%;
         margin: 10px;
         display: flex;
-
+        background-color: #f9f91c;
         .photo {
             margin-right: 10px;
 
